--- a/app/src/main/res/layout/fragment_unit1.xml
+++ b/app/src/main/res/layout/fragment_unit1.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -2917,5 +2919,20 @@
         android:layout_alignParentBottom="true"
         android:src="@drawable/ic_action_check"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <!--Floating Line App-->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingCheck2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/floatingCheck"
+        android:src="@drawable/icon_line"
+        android:scaleType="fitXY"
+        app:backgroundTint="@android:color/transparent"
+        app:borderWidth="0dp"
+
+        />
+
 
 </RelativeLayout>
