--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources  xmlns:tools="http://schemas.android.com/tools">
     <dimen name="h1">24sp</dimen>
     <dimen name="h2">15sp</dimen>
     <dimen name="padding">16dp</dimen>
@@ -8,4 +8,7 @@
     <dimen name="icon">60dp</dimen>
     <dimen name="h3">18sp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="design_fab_image_size" tools:override="true">56dp</dimen>
+
 </resources>
+
