--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -50,7 +50,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:background="@drawable/bg_clear3">
 
                 <TextView
                     android:id="@+id/preTestTitle"
@@ -224,6 +225,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding8"
+                android:background="@drawable/bg_clear3"
                 android:orientation="horizontal">
 
                 <TextView
@@ -398,6 +400,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding8"
+                android:background="@drawable/bg_clear3"
                 android:orientation="horizontal">
 
                 <TextView
