26May post-pre unit 1-5 success

--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -81,6 +81,30 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+
+                <!--Pretest Unit 1-5-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imgPreUnit1to5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_action_rectangle" />
+
+                    <TextView
+                        android:id="@+id/txtPreUnit1to5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:clickable="true"
+                        android:textSize="@dimen/h2"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
                 <!--Pretest Unit 1-->
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -502,6 +526,28 @@
 
                 </LinearLayout>
 
+                <!--Post-test Unit 1-5-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imgPostUnit1to5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_action_rectangle" />
+
+                    <TextView
+                        android:id="@+id/txtPostUnit1to5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:clickable="true"
+                        android:textSize="@dimen/h2"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
